--- a/_config.yml
+++ b/_config.yml
@@ -84,10 +84,10 @@ author:
   avatar           : "profile.png"
   bio              : "Postdoc"
   location         : "Leiden"
-  employer         :
+  employer         : "Leiden University Centre for Linguistics"
   pubmed           : 
   googlescholar    : 
-  email            :
+  email            : "s.d.terosier[a]hum.leidenuniv.nl
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
