--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         : "Leiden University Centre for Linguistics"
   pubmed           : 
   googlescholar    : 
-  email            : "s.d.terosier[a]hum.leidenuniv.nl
+  email            : "s.d.terosier[a]hum.leidenuniv.nl"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
