--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Stéphane Térosier"
-  avatar           : "profile.png"
+  avatar           : "portrait.jpg"
   bio              : "Postdoc"
   location         : 
   employer         : "LUCL"
