--- a/_config.yml
+++ b/_config.yml
@@ -82,9 +82,9 @@ analytics:
 author:
   name             : "Stéphane Térosier"
   avatar           : "portrait.jpg"
-  bio              : "Postdoc"
+  bio              : "Postdoctoral researcher"
   location         : 
-  employer         : "LUCL"
+  employer         : "Leiden University"
   pubmed           : 
   googlescholar    : 
   email            : "s.d.terosier@hum.leidenuniv.nl"
